2004-02-01  Pawel Salek

	* libbalsa/imap-server.c: try harder on failed cert verification.
	* libbalsa/libbalsa.[ch]: convert UI of cert v-fy to the new code.
	* libbalsa/imap/imap-tls.c: fix SSL threading. Improve server v-fy.

2004-02-01  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-01 10:06  PeterB

	* libbalsa/: address-entry.c, address-entry.h: streamline includes.
	* libbalsa/address-entry.c: replace control characters with spaces;
	fill input after button press event (should fix vanishing
	addresses); don't add null addresses to list.

2004-01-28  Pawel Salek

	* libbalsa/imap/imap-commands.c: temporary workaround for
	appending messages containing NUL characters.

2004-01-28 23:53  PeterB

	* libbalsa/: mailbox_local.c, mailbox_local.h, mailbox_maildir.c,
	mailbox_mbox.c, mailbox_mh.c, message.c, message.h: make
	GMimeMessage for mbox only when needed; implement
	fetch_message_structure method for mbox; populate message headers
	for mbox at parse time instead of load-message time; move release
	method from local backends to LibBalsaMailboxLocal; add separate
	GMimeMessage argument to libbalsa_message_headers_update.
	* libbalsa/mailbox_pop3.c: use a local variable instead of dynamic
	cast.
	* libbalsa/pop3.c: copy uid to caller's buffer only if it's valid.
	* libbalsa/imap/: imap-commands.c, imap-handle.h: implement
	imap_mbox_find_unseen(): gets the list and count of unseen
	messages.
	* libbalsa/mailbox_imap.c: implement lbm_imap_get_unseen(): gets
	unread messages and sets mailbox->unread_messages and
	mailbox->has_unread_messages.

2004-01-25 20:25  PeterB

	* libbalsa/imap/imap-tls.c: compile with threads disabled.
	* libbalsa/source-viewer.c: plug memory leak.
	* libbalsa/address-entry.c, libbalsa/send.c, src/balsa-mblist.c,
	src/main.c, src/sendmsg-window.c: plug memory leaks.

2004-01-25  Pawel Salek

	Do not store authorization data in ImapMboxHandle.