@@ -93,7 +93,7 @@ gboolean libbalsa_ldap_exists(const gchar *server);
 
 void libbalsa_assure_balsa_dir(void);
 
-#ifdef BALSA_USE_THREADS
+#ifdef USE_TLS
 #include <openssl/ssl.h>
 int libbalsa_ask_for_cert_acceptance(X509 *cert);
 #endif
